# 02476_MLOps

MNIST_ex/: Makefile  README.md  pyproject.toml
MNIST_ex/cookie_ex/: __init__.py  train_model.py
MNIST_ex/cookie_ex.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
MNIST_ex/cookie_ex/data/: make_dataset.py
MNIST_ex/cookie_ex/models/: model.py
MNIST_ex/docs/: mkdocs.yaml
MNIST_ex/docs/source/: index.md
MNIST_ex/models/: model.pth
